// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellGroup title slot 1`] = `
<div>
  <div class="ghb-cell-group__title">CustomTitle</div>
  <div class="ghb-cell-group ghb-hairline--top-bottom"></div>
</div>
`;

exports[`arrow direction 1`] = `
<div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable"><i class="ghb-icon ghb-icon-arrow-down ghb-cell__right-icon">
    <!----></i></div>
`;

exports[`icon-prefix prop 1`] = `
<div class="ghb-cell"><i class="my-icon my-icon-success ghb-cell__left-icon">
    <!----></i></div>
`;

exports[`render slot 1`] = `
<div class="ghb-cell">Custom Icon<div class="ghb-cell__title">Custom Title<div class="ghb-cell__label">Custom Label</div>
  </div>Custom Extra</div>
`;

exports[`title-style prop 1`] = `
<div class="ghb-cell">
  <div class="ghb-cell__title" style="color: red;"><span>title</span></div>
</div>
`;
